--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -168,7 +168,7 @@ font_size 14.0
 # cursor #cccccc
 # cursor                  #F2D5CF
 # cursor_text_color       #303446
-cursor_shape block 
+cursor_shape  beam
 cursor_underline_thickness 2
 cursor_blink_interval -1
 cursor_stop_blinking_after 15
@@ -1015,7 +1015,7 @@ editor .
 #: functionality is a security risk as it means that any program, even
 #: one running on a remote server via SSH can read your clipboard.
 
-# allow_hyperlinks yes
+allow_hyperlinks yes
 
 #: Process hyperlink (OSC 8) escape sequences. If disabled OSC 8
 #: escape sequences are ignored. Otherwise they become clickable
@@ -1047,7 +1047,7 @@ editor .
 #: system means to use the default system color, a value of background
 #: means to use the background color of the currently active window
 #: and finally you can use an arbitrary color, such as #12af59 or red.
-# macos_titlebar_color background
+macos_titlebar_color background
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, a value of
