--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      "FiraMono Nerd Font"
+font_family         "JetBrains Mono"
+# font_family      "FiraMono Nerd Font"
 # font_family      "MesloLGS NF"
 # bold_font        auto
 # italic_font      auto
@@ -24,7 +25,7 @@ font_family      "FiraMono Nerd Font"
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
+font_size 12.0
 
 #: Font size (in pts)
 
@@ -168,7 +169,7 @@ font_size 14.0
 # cursor #cccccc
 # cursor                  #F2D5CF
 # cursor_text_color       #303446
-cursor_shape  beam
+cursor_shape  block
 cursor_underline_thickness 2
 cursor_blink_interval -1
 cursor_stop_blinking_after 15
@@ -1529,8 +1530,8 @@ map cmd+9 goto_tab 9
 
 # Window layout
 remember_window_size  yes
-initial_window_width  800
-initial_window_height 600
+# initial_window_width  800
+# initial_window_height 600
 enabled_layouts *
 window_resize_step_cells 1
 window_resize_step_lines 1
@@ -1549,8 +1550,11 @@ resize_debounce_time 0.05 0.05
 confirm_os_window_close 0
 
 cursor_trail 1
-cursor_trail_decay 0.1 0.4
-cursor_trail_start_threshold 2
+cursor_trail_decay 0.1 0.3
+cursor_trail_start_threshold 3
+macos_colorspace displayp3
+
+
 
 map cmd+f combine : show_scrollback : send_text normal,application /
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i --tac
